# DMPE

./: .gitignore  README.md  density_estimation.py  dev.ipynb  metrics.py  model_utils.py  models.py  optimization_utils.py  plotting_utils.py  pyproject.toml  requirements.txt  signals.py  test_MPC_with_given_model.ipynb  test_NODEs.ipynb  test_excenvs.ipynb
dev/: 1d_systems.ipynb  GOATs_np.ipynb  NODE_Lotka_Volterra.ipynb  dev.ipynb  dev_cartpole.ipynb  dev_fluidtank.ipynb  dev_mass_spring_damper.ipynb  dev_pendulum.ipynb  dev_pmsm.ipynb  iGOATs.ipynb  iGOATs_SGD.ipynb  iGOATs_evosax.ipynb  iGOATs_np_CMA-ES.ipynb  iGOATs_optuna.ipynb  minimally_reproducible_mass_spring_damper_cart.ipynb  optimal_model_trajectories.ipynb  presentation_nb.ipynb  rebuild_components_as_pytrees.ipynb  taming_goats.ipynb  test_bw.ipynb  test_metrics.ipynb  test_optimal_inputs_for_excitation.ipynb
dev/unmaintained/: reachability_analysis.ipynb  rebuild_components_as_pytrees.ipynb  test_NODEs.ipynb  test_action_reconstruction_from_trajectory.ipynb  test_penalty_terms.ipynb  to_normalized_JSD.ipynb
dmpe/: __init__.py
dmpe/algorithms/: __init__.py  algorithm_utils.py  algorithms.py
dmpe/evaluation/: experiment_utils.py  metrics_utils.py  plotting_utils.py
dmpe/excitation/: __init__.py  excitation_utils.py
dmpe/models/: __init__.py  model_training.py  model_utils.py
dmpe/related_work/: __init__.py  algorithms.py  excitation_utils.py  mixed_GA.py  multitasking_tsp.py
dmpe/related_work/np_reimpl/: env_utils.py
dmpe/utils/: signals.py
eval/: constraint_eval.ipynb  experiment_eval.ipynb  model_eval.ipynb  qualitative_eval.ipynb  quantitative_eval.ipynb
eval/scripts/: dmpe_eval.py  goats_eval.py  igoats_eval.py  perfect_model_dmpe_eval.py  sgoats_eval.py
examples/: SIMO_example.ipynb  simple_example_pendulum.ipynb
exciting-exciting-systems/evaluation/: plotting_utils.py
exciting-exciting-systems/models/: model_utils.py
exciting-exciting-systems/optimization/: optimization_utils.py
exciting_exciting_systems/: __init__.py
exciting_exciting_systems/algorithms/: algorithm_utils.py  algorithms.py
exciting_exciting_systems/evaluation/: experiment_utils.py  metrics_utils.py  plotting_utils.py
exciting_exciting_systems/excitation/: __init__.py  excitation_utils.py
exciting_exciting_systems/models/: model_training.py  model_utils.py  models.py
exciting_exciting_systems/optimization/: __init__.py  optimization_utils.py
exciting_exciting_systems/related_work/: algorithms.py  excitation_utils.py
exciting_exciting_systems/related_work/np_reimpl/: env_utils.py  metrics.py  (+1 more)
exciting_exciting_systems/utils/: density_estimation.py  metrics.py
