[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dmpe"
version = "0.0.1"
authors = [
  { name="Hendrik Vater", email="vater@lea.uni-paderborn.de" },
]
description = "Excitation of exciting systems through differentiable predictive excitation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hvater/DMPE"
Issues = "https://https://github.com/hvater/DMPE/issues"

[tool.setuptools]
py-modules = [
    "dmpe",
    "evaluation",
    "optimization",
    "utils",
    "models"
]