[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dmpe"
version = "0.1.1"
authors = [
  { name="Hendrik Vater", email="vater@lea.uni-paderborn.de" },
]
description = "Excitation of exciting systems through differentiable predictive excitation"
readme = "README.md"
requires-python = "==3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
    'scipy',
    'matplotlib',
    'tqdm',
    'jax',
    'equinox',
    'diffrax',
    'optax',
    'dm-haiku',
    'pymoo',
]

[project.urls]
Homepage = "https://github.com/hvater/DMPE"
Issues = "https://https://github.com/hvater/DMPE/issues"

[tool.setuptools]
py-modules = [
    "dmpe",
]